Refactor sync notification to listener pattern and fix format registry setting lookup
Signed-off-by: nishchay21 <nishcha@amazon.com>